Proposal for Http client refactor. (#75)
* Support properties (#66)

* support for properties

* support for properties

* support for properties

* support for properties

* support for properties

* support for properties

* support for properties

* support for properties

* support for properties

* support for properties

* Assert that the list of dependencies is empty.

Co-authored-by: Tim Peeters <tim.peeters@xplore.be>

* change the version in the pom.xml file (#67)

* finding version

* support for properties

* support for properties

* replace version

* support for properties

* cleanup

* support for properties

* testing

* cleanup

* cleanup

* those test coverage numbers were rookie numbers

* cleanup

* 100% coverage :-)

* waiting for properties

* support for properties

* optimizing

* support for properties

* resolve prop

* cleanup

* cleanup

* support for properties

* support for properties

* support for properties

* support for properties

* cleanup

* Auto stash before merge of "dependencyBumper" and "support_properties"

* cleanup

Co-authored-by: Jos <36787145+the-jos@users.noreply.github.com>

* Proposal for Http client refactor.

* Log IOExceptions.

* Disable default PMD rules. (#76)

Co-authored-by: Tim Peeters <tim.peeters@xplore.be>

* @Getter annotation no longer necessary with correct PMD rules applied.

Co-authored-by: Jos <36787145+the-jos@users.noreply.github.com>
Co-authored-by: Tim Peeters <tim.peeters@xplore.be>
Co-authored-by: Gschrooyen <38291221+Gschrooyen@users.noreply.github.com>