@@ -4,30 +4,32 @@ import com.github.autobump.core.exceptions.DependencyParserException;
 import com.github.autobump.core.model.Dependency;
 import com.github.autobump.core.model.Version;
 import com.github.autobump.core.model.VersionRepository;
-import com.github.autobump.maven.exceptions.WrongUrlException;
-import lombok.Getter;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.maven.artifact.repository.metadata.io.xpp3.MetadataXpp3Reader;
 import org.codehaus.plexus.util.xml.pull.XmlPullParserException;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.MalformedURLException;
+import java.net.HttpURLConnection;
 import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.time.Duration;
-import java.util.HashSet;
+import java.util.Collections;
 import java.util.Set;
-import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
-@Getter
+@Slf4j
 public class MavenVersionRepository implements VersionRepository {
-    private static final int STATUSCODE_OK = 200;
-    private static final int TIMEOUT = 30;
+
+    private static final Duration CONNECT_TIMEOUT = Duration.ofSeconds(2);
+    private static final Duration REQUEST_TIMEOUT = Duration.ofSeconds(5);
+
+    private final HttpClient httpClient = HttpClient.newBuilder()
+            .connectTimeout(CONNECT_TIMEOUT)
+            .build();
+
     private final String baseUrl;
 
     public MavenVersionRepository(String baseUrl) {
@@ -36,8 +38,7 @@ public class MavenVersionRepository implements VersionRepository {
 
     @Override
     public Set<Version> getAllAvailableVersions(Dependency dependency) {
-        InputStream in = getInputStream(dependency);
-        try {
+        try (InputStream in = readMavenMetaDataForDependency(dependency)) {
             return new MetadataXpp3Reader()
                     .read(in)
                     .getVersioning()
@@ -46,33 +47,29 @@ public class MavenVersionRepository implements VersionRepository {
                     .map(MavenVersion::new)
                     .collect(Collectors.toUnmodifiableSet());
         } catch (XmlPullParserException e) {
-            throw new DependencyParserException("something went wrong while parseing the xml", e);
+            throw new DependencyParserException("Something went wrong while parsing the xml", e);
         } catch (IOException e) {
-            return new HashSet<>();
+            log.warn("Unable to read maven-metadata.xml for dependency {}", dependency, e);
         }
+
+        return Collections.emptySet();
     }
 
-    private InputStream getInputStream(Dependency dependency) {
-        HttpClient httpClient = HttpClient.newHttpClient();
-        HttpRequest request = HttpRequest.newBuilder().GET().uri(getRepoUri(dependency))
-                .timeout(Duration.ofSeconds(TIMEOUT)).build();
+    private InputStream readMavenMetaDataForDependency(Dependency dependency) {
+        HttpRequest request = HttpRequest.newBuilder().GET()
+                .uri(getMavenMetaDataUriForDependency(dependency))
+                .timeout(REQUEST_TIMEOUT)
+                .build();
 
-        CompletableFuture<HttpResponse<InputStream>> future = httpClient.sendAsync(request, responseInfo
-                -> responseInfo.statusCode() == STATUSCODE_OK ?
-                HttpResponse.BodySubscribers.ofInputStream() :
-                HttpResponse.BodySubscribers.replacing(null)
-        );
-        return future.thenApply(HttpResponse::body).join();
+        return httpClient.sendAsync(request, HttpResponse.BodyHandlers.ofInputStream())
+                .thenApply(response -> response.statusCode() == HttpURLConnection.HTTP_OK ? response.body() : null)
+                .join();
     }
 
-    private URI getRepoUri(Dependency dependency) {
-        try {
-            return new URL(String.format("%s/%s/%s/maven-metadata.xml",
-                    baseUrl,
-                    dependency.getGroup().replaceAll("\\.", "/"),
-                    dependency.getName())).toURI();
-        } catch (MalformedURLException | URISyntaxException e) {
-            throw new WrongUrlException("wrong URI Syntax", e);
-        }
+    private URI getMavenMetaDataUriForDependency(Dependency dependency) {
+        return URI.create(String.format("%s/%s/%s/maven-metadata.xml",
+                baseUrl,
+                dependency.getGroup().replace('.', '/'),
+                dependency.getName()));
     }
 }
